--- a/FrontEnd/src/pages/login/style.scss
+++ b/FrontEnd/src/pages/login/style.scss
@@ -62,11 +62,14 @@
 }
 
 .open_signup {
-  background: var(--green-color);
+  background: #00ba53f5;
   width: 70% !important;
   font-weight: 600 !important;
   font-size: 17px !important;
   margin-top: 1rem;
+}
+.btn_login {
+  background: #16a8c8d6;
 }
 
 .sign_extra {
