--- a/FrontEnd/src/pages/home/style.scss
+++ b/FrontEnd/src/pages/home/style.scss
@@ -14,7 +14,7 @@
 @media (max-width: 1175px) {
   .stories,
   .createPost,
-  .send_verification {
+  .send_verification , .post{
     width: 84%;
   }
   .right_home {
@@ -61,13 +61,13 @@
   }
   .stories,
   .createPost,
-  .send_verification {
+  .send_verification , .post{
     width: 100%;
   }
 }
 @media (max-width: 960px) {
   .createPost,
-  .send_verification {
+  .send_verification , .post{
     width: 93%;
   }
   .stories {
@@ -93,7 +93,7 @@
     display: none;
   }
   .createPost,
-  .send_verification {
+  .send_verification , .post{
     width: 110%;
   }
   .stories {
@@ -128,6 +128,7 @@
   .home_middle{
     width:75vw;
   }
+  
 }
 @media (max-width: 620px) {
   .left_home {
@@ -140,7 +141,7 @@
   }
   .stories,
   .createPost,
-  .send_verification {
+  .send_verification , .post{
     width: 100%;
   }
   .stories .white_circle {
