Message part completed

--- a/FrontEnd/src/components/home/right/style.scss
+++ b/FrontEnd/src/components/home/right/style.scss
@@ -3,11 +3,12 @@
     left: 80.7vw;
     top: 4rem;
     width: 17vw;
+    background-color: rgb(255, 255, 255);
   }
   .splitter1 {
     height: 1.3px;
     background: var(--divider);
-    width: 17vw;
+    width: 16vw;
     margin: 6px 2px 0 12px;
   }
   .contacts_header {
@@ -69,4 +70,10 @@
   .contact span {
     transform: translateY(-5px);
   }
+
+  .friendsMessage{
+    display: flex;
+    justify-content: space-between;
+  }
   
+ 
