--- a/FrontEnd/src/components/createPost/style.css
+++ b/FrontEnd/src/components/createPost/style.css
@@ -11,15 +11,13 @@
   align-items: center;
   gap: 8px;
   padding: 10px 17px 5px 15px;
-
-  img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
 }
-
+.createPost_header img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
 .open_post {
   background: var(--bg-forth);
   color: var(--color-secondary);
@@ -41,7 +39,7 @@
 .createPost_body {
   padding: 0 10px 8px 10px;
   display: grid;
-  place-items: center;
+  grid-template-columns: repeat(3, 1fr);
 }
 .createPost_icon {
   display: flex;
