--- a/FrontEnd/src/components/header/style.scss
+++ b/FrontEnd/src/components/header/style.scss
@@ -467,6 +467,30 @@ header {
 
 /*-------User menu----*/
 
+.search_results {
+  width: 100%;
+}
+
+.userSearch{
+  display: flex;
+  gap: 8px;
+  padding: 10px;
+  width: 100%;
+  border-radius: 5px;
+}
+.userSearch:hover{
+background: var(--bg-forth);
+}
+.userSearch img{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.userName{
+  transform: translateY(6px);
+}
+
 /*---responsive----------*/
 @media (max-width: 1295px) {
   .middle_icon {
